Update roadmap with 4 new TODO items from user testing feedback
New items:
1. Redesign pattern edit screen to match main view style
2. Multi-measure playback for saved files (persistence + reload)
3. Unified Settings menu replacing standalone Accessibility menu
4. Better multi-measure visualization in main screen

All 6 items from the previous roadmap are completed and marked as done.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>